--- a/Secrets/res/layout/activity_login.xml
+++ b/Secrets/res/layout/activity_login.xml
@@ -20,6 +20,7 @@
         android:id="@+id/textViewMsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:text="@string/code_hint"
         android:textColor="#ff0000"
         android:textStyle="bold" />
@@ -29,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="numberPassword"
+        android:inputType="textPassword"
         android:singleLine="true"
         android:textColor="#ff0000"
         android:textStyle="bold" >
@@ -54,6 +55,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:onClick="login"
+                android:textColor="#FFFFFF"
                 android:text="@string/button_login" />
 
             <Button
@@ -62,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/buttonLogin"
+                android:textColor="#FFFFFF"
                 android:onClick="cancel"
                 android:text="@string/button_cancel" />
 
