--- a/Secrets/res/layout/activity_photos.xml
+++ b/Secrets/res/layout/activity_photos.xml
@@ -11,7 +11,13 @@
     <ListView
         android:id="@+id/listFiles"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:layout_above="@+id/relativeLayout2"
+        android:choiceMode="multipleChoice"
+        android:drawSelectorOnTop="true"
+        android:fastScrollEnabled="true"
+        android:smoothScrollbar="true"
+        android:stackFromBottom="false" >
     </ListView>
 
     <ProgressBar
@@ -30,17 +36,50 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:background="#111100" >
+        android:background="#111100"
+        android:paddingBottom="0dip"
+        android:paddingTop="0dip" >
+
+        <CheckBox
+            android:id="@+id/checkBox1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/checkBox2"
+            android:layout_below="@+id/checkBox2"
+            android:drawablePadding="0dp"
+            android:onClick="selectAll"
+            android:paddingBottom="0dip"
+            android:paddingTop="0dip"
+            android:text="@string/text_All"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+        <CheckBox
+            android:id="@+id/checkBox2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:drawablePadding="0dp"
+            android:paddingBottom="0dip"
+            android:paddingTop="0dip"
+            android:text="@string/text_preview"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button_encrypt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/button_decrypt"
+            android:layout_alignBottom="@+id/button_decrypt"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
             android:onClick="encrypt"
-            android:text="@string/text_encrypt" />
+            android:text="@string/text_encrypt"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button_decrypt"
@@ -49,18 +88,10 @@
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/button_encrypt"
             android:onClick="decrypt"
-            android:text="@string/text_decrypt" />
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/button_decrypt"
-            android:text="@string/text_lastLogin"
-            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="@string/text_decrypt"
             android:textColor="#FFFFFF"
-            android:textStyle="bold|italic" />
+            android:textStyle="bold" />
+
     </RelativeLayout>
 
 </RelativeLayout>
