--- a/Secrets/res/layout/activity_files.xml
+++ b/Secrets/res/layout/activity_files.xml
@@ -10,7 +10,9 @@
     <ListView
         android:id="@+id/listFiles"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/relativeLayout2" >
+
     </ListView>
 
     <ProgressBar
