--- a/Secrets/res/layout/activity_photos.xml
+++ b/Secrets/res/layout/activity_photos.xml
@@ -50,6 +50,7 @@
             android:onClick="selectAll"
             android:paddingBottom="0dip"
             android:paddingTop="0dip"
+            android:shadowColor="#FFFFFF"
             android:text="@string/text_All"
             android:textColor="#FFFFFF"
             android:textSize="12sp"
@@ -64,6 +65,7 @@
             android:drawablePadding="0dp"
             android:paddingBottom="0dip"
             android:paddingTop="0dip"
+            android:shadowColor="#FFFFFF"
             android:text="@string/text_preview"
             android:textColor="#FFFFFF"
             android:textSize="12sp"
@@ -91,7 +93,6 @@
             android:text="@string/text_decrypt"
             android:textColor="#FFFFFF"
             android:textStyle="bold" />
-
     </RelativeLayout>
 
 </RelativeLayout>
