--- a/Secrets/res/layout/activity_secrets.xml
+++ b/Secrets/res/layout/activity_secrets.xml
@@ -36,7 +36,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:onClick="save"
-            android:text="@string/button_save" />
+            android:text="@string/button_save"
+            android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/button_quit"
@@ -45,7 +46,8 @@
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/button_save"
             android:onClick="quit"
-            android:text="@string/button_quit" />
+            android:text="@string/button_quit"
+            android:textColor="#FFFFFF" />
 
         <TextView
             android:id="@+id/textView1"
@@ -66,7 +68,6 @@
         android:layout_above="@+id/relativeLayout2"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" >
-
     </ListView>
 
 </RelativeLayout>
