--- a/Secrets/res/layout/activity_help.xml
+++ b/Secrets/res/layout/activity_help.xml
@@ -6,7 +6,7 @@
     android:textAlignment="gravity"
     tools:context=".Help" >
 
-    <EditText
+    <TextView
         android:id="@+id/editText1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:inputType="textMultiLine"
+        
         android:clickable="false"
         android:ems="10"
         android:gravity="top|left"
